--- a/public/stylesheets/tradingTicket.css
+++ b/public/stylesheets/tradingTicket.css
@@ -32,10 +32,12 @@ li {
     margin-top: 20px;
 }
 
-#reviewOrder {
-    margin-top: 20px;
-}
-
 #reviewScreen {
     font-size: large;
+}
+
+#trading-ticket-input {
+    width: fit-content;
+    padding: 10px;
+    border: 2px solid #000000;
 }
