Add multiple trading tickets

--- a/public/stylesheets/tradingTicket.css
+++ b/public/stylesheets/tradingTicket.css
@@ -36,7 +36,7 @@ li {
     font-size: large;
 }
 
-#trading-ticket-input {
+.trading-ticket-form {
     width: fit-content;
     padding: 10px;
     border: 2px solid #000000;
