--- a/views/tradingTicket.hbs
+++ b/views/tradingTicket.hbs
@@ -21,13 +21,13 @@
                 <option value="sell">sell</option>
             </select>
             <p class="title"><h4>Order Price Type: </h4></p>
-            <select id="priceType1" name="orderPriceType1" class="form-control">
+            <select id="priceType1" name="orderPriceType1" class="form-control" data-trading-ticket-num="1">
                 <option value="market">market</option>
                 <option value="limit">limit</option>
             </select>
 
-            <p class="title hidden limit">Order Limit Price: </p>
-            <input id="orderLimitPrice1" class="hidden limit" name="orderLimitPrice" type="number"></input>
+            <p class="title hidden limit1">Order Limit Price: </p>
+            <input id="orderLimitPrice1" class="hidden form-control limit1" name="orderLimitPrice" type="number"></input>
 
             <p class="title"><h4>Order Expiration: </h4></p>
             <select name="orderExpiration1" class="form-control">
@@ -44,18 +44,20 @@
 
     <div class="hidden" id="reviewScreen">
         <span class="text-info">Review Screen:</span><br><br>
-        <span id="orderSymbol"></span><br>
-        <span id="orderAction"></span><br>
-        <span id="orderQuantity"></span><br>
-        <span id="orderExpiration"></span><br>
-        <span id="orderPrice"></span><br>
-        <span id="orderValueLabel"></span><br>
-        <span id="orderMessage"></span><br>
-        <span id="timestamp"></span><br>
-        <span id="buyingPower"></span><br>
-        <span id="availableCash"></span><br>
-        <span id="estimatedOrderCommission"></span>
-        <br><br>
+        <div id="review-block-1" class="review-blocks">
+            <span id="orderSymbol1"></span><br>
+            <span id="orderAction1"></span><br>
+            <span id="orderQuantity1"></span><br>
+            <span id="orderExpiration1"></span><br>
+            <span id="orderPrice1"></span><br>
+            <span id="orderValueLabel1"></span><br>
+            <span id="orderMessage1"></span><br>
+            <span id="timestamp1"></span><br>
+            <span id="buyingPower1"></span><br>
+            <span id="availableCash1"></span><br>
+            <span id="estimatedOrderCommission1"></span>
+        </div>
+        <br>
         <button class="btn btn-danger" id="cancel">Cancel</button>
         <button class="btn btn-success" id="placeOrder">Place Order</button>
 
@@ -95,10 +97,10 @@
 
         $('#priceType1').on('change', function() {
             if ($(this).val() == 'limit') {
-                $('.limit').removeClass('hidden');
+              $('.limit1').removeClass('hidden');
             }
             else if($(this).val() == 'market') {
-                $('.limit').addClass('hidden');
+              $('.limit1').addClass('hidden');
             }
         });
 
@@ -112,16 +114,17 @@
     });
 
     var getPreviewOrder = function(){
+      for (var i=1; i<=next; i+=1) {
         var postData = {};
         postData.token = "{{data.sessionToken}}";
-        postData.orderSymbol = $('#orderSymbolSet1').val();
-        postData.accountNumber = $('#accountNumber1').val();
-        postData.orderQuantity = $('#orderQuantitySet1').val();
-        postData.orderAction = $('select[name=orderAction1]').val();
-        postData.orderPriceType = $('select[name=orderPriceType1]').val();
-        postData.orderExpiration = $('select[name=orderExpiration1]').val();
+        postData.orderSymbol = $('#orderSymbolSet'+i).val();
+        postData.accountNumber = $('#accountNumber'+i).val();
+        postData.orderQuantity = $('#orderQuantitySet'+i).val();
+        postData.orderAction = $('select[name=orderAction'+i+']').val();
+        postData.orderPriceType = $('select[name=orderPriceType'+i+']').val();
+        postData.orderExpiration = $('select[name=orderExpiration'+i+']').val();
         if(postData.orderPriceType == "limit"){
-            postData.orderLimitPrice = $('#orderLimitPrice1').val();
+            postData.orderLimitPrice = $('#orderLimitPrice'+i).val();
         }
 
         $.ajax({
@@ -129,49 +132,74 @@
             dataType: "jsonp",
             method: "POST",
             url: "https://ems.qa.tradingticket.com/api/v1/order/previewStockOrEtfOrder",
-            success: parseResult
+            success: incrementSuccessReviews
         });
-
+      }
     };
 
-    var parseResult = function(data){
+    var successReviewCount = 0;
+    var dataArray = [];
+    var incrementSuccessReviews = function(data) {
+      if(data.status == "REVIEW_ORDER") {
+        successReviewCount += 1;
+        dataArray.push(data);
+      } else if(data.status == "ERROR"){
+        $('#shortMessage').val(data.shortMessage);
+        $('#longMessage').val(data.longMessages[0]);
+        $('#sendErrorMgs').click();
+      }
+
+      if (successReviewCount == next) {
+        parseResult(dataArray);
+      }
+    };
+
+    var parseResult = function(dataArray){
+      for (var j = 0; j < dataArray.length; j+=1) {
+        if (j == 0) continue;
+        
+        var addto = "#review-block-"+j;
+        var num = j+1;
+        var newIn = '<div id="review-block-'+num+'" class="review-blocks"> <span id="orderSymbol'+num+'"></span><br> <span id="orderAction'+num+'"></span><br> <span id="orderQuantity'+num+'"></span><br> <span id="orderExpiration'+num+'"></span><br> <span id="orderPrice'+num+'"></span><br> <span id="orderValueLabel'+num+'"></span><br> <span id="orderMessage'+num+'"></span><br> <span id="timestamp'+num+'"></span><br> <span id="buyingPower'+num+'"></span><br> <span id="availableCash'+num+'"></span><br> <span id="estimatedOrderCommission'+num+'"></span> </div>';
+        var newInput = $(newIn);
+        $(addto).after(newInput); 
+      }
+      
+      console.log(dataArray);
+      $('#reviewScreen').removeClass('hidden');
+      $('#tradeInput').addClass('hidden');
+      for (var i = 0; i < dataArray.length; i+=1) {
+        var data = dataArray[i];
+        var num = i+1;
         if(data.status == "REVIEW_ORDER"){
-            $('#reviewScreen').removeClass('hidden');
-            $('#tradeInput').addClass('hidden');
             if(data.orderDetails){
-                $('#orderSymbol').text("Order Symbol: " + data.orderDetails.orderSymbol);
-                $('#orderAction').text("Order Action: " + data.orderDetails.orderAction);
-                $('#orderQuantity').text("Order Quantity: " + data.orderDetails.orderQuantity);
-                $('#orderExpiration').text("Order Expiration: " + data.orderDetails.orderExpiration);
-                $('#orderPrice').text("Order Price: " + data.orderDetails.orderPrice);
-                $('#orderValueLabel').text("Order Value Label: " + data.orderDetails.orderValueLabel);
-                $('#orderMessage').text("Order Message: " + data.orderDetails.orderMessage);
-                $('#timestamp').text("Timestamp: " + data.orderDetails.timestamp);
-                $('#buyingPower').text("Buying Power: " + data.orderDetails.buyingPower);
-                $('#availableCash').text("Available Cash: " + data.orderDetails.availableCash);
-                $('#estimatedOrderCommission').text("Estimated Order Commission: " + data.orderDetails.estimatedOrderCommission);
-
-
-                $('#cancel').on('click', function(){
-                    $('#tradeInput').removeClass('hidden');
-                    $('#reviewScreen').addClass('hidden');
-                });
-
-                $('#placeOrder').on('click', function(){
-                    $('#placeOrder').addClass("disabled");
-                    placeOrder(data.token, data.orderId)
-                });
+                $('#orderSymbol'+num).text("Order Symbol: " + data.orderDetails.orderSymbol);
+                $('#orderAction'+num).text("Order Action: " + data.orderDetails.orderAction);
+                $('#orderQuantity'+num).text("Order Quantity: " + data.orderDetails.orderQuantity);
+                $('#orderExpiration'+num).text("Order Expiration: " + data.orderDetails.orderExpiration);
+                $('#orderPrice'+num).text("Order Price: " + data.orderDetails.orderPrice);
+                $('#orderValueLabel'+num).text("Order Value Label: " + data.orderDetails.orderValueLabel);
+                $('#orderMessage'+num).text("Order Message: " + data.orderDetails.orderMessage);
+                $('#timestamp'+num).text("Timestamp: " + data.orderDetails.timestamp);
+                $('#buyingPower'+num).text("Buying Power: " + data.orderDetails.buyingPower);
+                $('#availableCash'+num).text("Available Cash: " + data.orderDetails.availableCash);
+                $('#estimatedOrderCommission'+num).text("Estimated Order Commission: " + data.orderDetails.estimatedOrderCommission);
             }
             if(data.warningsList[0]){
-                $('#reviewScreen').append("<p>warningMessage: " + data.warningsList[0] + "</p>");
+                $('#review-block-'+num).append("<p>warningMessage: " + data.warningsList[0] + "</p>");
             }
         }
-        if(data.status == "ERROR"){
-            $('#shortMessage').val(data.shortMessage);
-            $('#longMessage').val(data.longMessages[0]);
-            $('#sendErrorMgs').click();
+      }
 
-        }
+      $('#cancel').on('click', function(){
+          $('#tradeInput').removeClass('hidden');
+          $('#reviewScreen').addClass('hidden');
+      });
+
+      $('#placeOrder').on('click', function(){
+          $('#placeOrder').addClass("disabled");
+          placeOrder(data.token, data.orderId)
+      });
     };
 
     var placeOrder = function(sessionToken, orderId){
@@ -216,16 +244,17 @@
         e.preventDefault();
         var addto = "#trading-ticket-input"+next;
         next = next + 1;
-        var newIn = '<div id="trading-ticket-input'+next+'" class="form-group trading-ticket-form"> <input class="hidden" id="accountNumber'+next+'" name="accountNumber" value={{data.accountNumber}}></input> <p class="title"><h4>Ticker Name: </h4></p><input class="form-control" id="orderSymbolSet'+next+'" name="orderSymbol" style="width: 15vw"></input> <p class="title"><h4>Order Quantity: </h4></p><input class="form-control" id="orderQuantitySet'+next+'" name="orderQuantity" type="number" style="width: 15vw"></input> <p class="title"><h4>Order Action: </h4></p> <select name="orderAction'+next+'" class="form-control"> <option value="buy">buy</option> <option value="sell">sell</option> </select> <p class="title"><h4>Order Price Type: </h4></p> <select id="priceType'+next+'" name="orderPriceType'+next+'" class="form-control"> <option value="market">market</option> <option value="limit">limit</option> </select> <p class="title hidden limit">Order Limit Price: </p> <input id="orderLimitPrice'+next+'" class="hidden limit" name="orderLimitPrice" type="number"></input> <p class="title"><h4>Order Expiration: </h4></p> <select name="orderExpiration'+next+'" class="form-control"> <option value="day">day</option> <option value="gtc">gtc</option> </select> <br> </div>'
+      var newIn = '<div id="trading-ticket-input'+next+'" class="form-group trading-ticket-form"> <input class="hidden" id="accountNumber'+next+'" name="accountNumber" value={{data.accountNumber}}></input> <p class="title"><h4>Ticker Name: </h4></p><input class="form-control" id="orderSymbolSet'+next+'" name="orderSymbol" style="width: 15vw"></input> <p class="title"><h4>Order Quantity: </h4></p><input class="form-control" id="orderQuantitySet'+next+'" name="orderQuantity" type="number" style="width: 15vw"></input> <p class="title"><h4>Order Action: </h4></p> <select name="orderAction'+next+'" class="form-control"> <option value="buy">buy</option> <option value="sell">sell</option> </select> <p class="title"><h4>Order Price Type: </h4></p> <select id="priceType'+next+'" name="orderPriceType'+next+'" class="form-control" data-trading-ticket-num="'+next+'"> <option value="market">market</option> <option value="limit">limit</option> </select> <p class="title hidden limit'+next+'">Order Limit Price: </p> <input id="orderLimitPrice'+next+'" class="hidden form-control limit'+next+'" name="orderLimitPrice" type="number"></input> <p class="title"><h4>Order Expiration: </h4></p> <select name="orderExpiration'+next+'" class="form-control"> <option value="day">day</option> <option value="gtc">gtc</option> </select> <br> </div>'
         var newInput = $(newIn);
         $(addto).after(newInput);
         
         $('#priceType'+next).on('change', function() {
+            var num = $(this).data("trading-ticket-num");
             if ($(this).val() == 'limit') {
-                $('.limit').removeClass('hidden');
+              $('.limit'+num).removeClass('hidden');
             }
             else if($(this).val() == 'market') {
-                $('.limit').addClass('hidden');
+              $('.limit'+num).addClass('hidden');
             }
         });
     });
