--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,4 +1,4 @@
-<div class="wii-info tab">
+<div class="wii-info tab" id="what-you-can-do-next">
       <div class="wii-info__tiles">
         <h3>
             Services that made this possible
